--- a/vercel.json
+++ b/vercel.json
@@ -30,8 +30,11 @@
   ],
 
   "build": {
-    "env": {
-      "MONGODB_URI": "@mongodb-uri"
-    }
+    "commands": {
+      "install": "npm install",        
+      "build": "npm run build",         
+      "dev": "npm run dev"             
+    },
+    "outputDirectory": "out"           
   }
 }
