--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",   // Points to package.json for Next.js detection
+      "src": "package.json",  
       "use": "@vercel/next"
     },
     {
