--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/public/$1"
+      "dest": "/server.js"
     },
     {
       "src": "/",
-      "dest": "/public/index.html"
+      "dest": "/public/sacn.html"
     }
   ]
 }
