--- a/vercel.json
+++ b/vercel.json
@@ -25,9 +25,13 @@
       "dest": "/routes/candidate.js"
     },
     {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/server.js"
-    },
+    }
 
   ]
 }
