--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "src": "/api/auth/(.*)",
       "dest": "/routes/auth.js"
     },
+        {
+      "src": "/api/auth/login",
+      "dest": "/routes/auth.js"
+    },
     {
       "src": "/api/vote/(.*)",
       "dest": "/routes/vote.js"
@@ -30,7 +34,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/routes/auth.js"
+      "dest": "/server.js"
     }
 
   ]
