--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+   "framework": "nextjs"
   "builds": [
     {
       "src": "server.js",
@@ -13,15 +14,18 @@
   "routes": [
 
     {
-      "src": "/api/auth/(.*)",
+      "src": "/api/auth/login",
+      "methods": ["POST"],
       "dest": "/routes/auth.js"
     },
     {
       "src": "/api/vote/(.*)",
+      "methods": ["POST"],
       "dest": "/routes/vote.js"
     },
     {
       "src": "/api/candidate/(.*)",
+      "methods": ["POST"],
       "dest": "/routes/candidate.js"
     },
     {
