modified:   api/admin.js 	modified:   api/auth.js 	renamed:    server.js -> api/index.js 	modified:   api/verify.js 	modified:   api/voted.js 	modified:   api/voter.js 	modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
+    { "source": "/(.*)", "destination": "/api" }
+  ],
+  "public": "public",
+  "headers": [
+    { "source": "/(.*)", "headers": [{"key": "Cache-Control", "value": "max-age=0"}]}
   ]
 }
