Changes to be committed: 	modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api" }
- ],
-  "headers": [
-    { "source": "/(.*)", "headers": [{"key": "Cache-Control", "value": "max-age=0"}]}
-  ]
+  "public": "public",
+  "headers": [{
+    "source": "/(.*)",
+    "headers": [{ "key": "Cache-Control", "value": "max-age=0" }]
+  }]
 }
