--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "version": 2,
-  "public": "public",
-  "headers": [{
-    "source": "/(.*)",
-    "headers": [{ "key": "Cache-Control", "value": "max-age=0" }]
-  }]
+  "public": "public", 
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ]
 }
